fix(embodiments): adjust max-width for embodiments container at different screen sizes; update isDataLoading to reflect static state fix(card): hide card-wrapper hover effect on smaller screens

--- a/src/app/features/embodiments/embodiments.component.scss
+++ b/src/app/features/embodiments/embodiments.component.scss
@@ -60,6 +60,18 @@
   display: none !important;
 }
 
+@media screen and (max-width: 1680px) {
+  .embodiments-container {
+    max-width: 1000px;
+  }
+}
+
+@media screen and (max-width: 845px) {
+  .embodiments-container {
+    max-width: 500px;
+  }
+}
+
 @media screen and (max-width: 502px) {
   .embodiments-container {
     padding: 10px;
