--- a/src/app/shared/ui/card/card.component.scss
+++ b/src/app/shared/ui/card/card.component.scss
@@ -317,3 +317,9 @@
     }
   }
 }
+
+@media (max-width: 700px) {
+  .card-wrapper:hover::before {
+    display: none;
+  }
+}
